native sandbox security strategy